--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,10 @@ html {
 /* ===== Numéro 1 ===== */
 body {
     font:normal 1.8rem/160% 'PT Sans', sans-serif ;
-  
-  
+    /*font-family: 'PT Sans', sans-serif;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 160%;*/
 }
 
 
@@ -31,10 +33,11 @@ body {
 /* ===== Numéro 2 ===== */
 .wrapper {
     max-width: 1100px;
-    margin-left: auto;
+    margin: 0 auto;
+   /*margin-left: auto;
     margin-right: auto;
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 0;*/
 }
 
 
@@ -44,12 +47,14 @@ body {
 
 /* ===== Numéro 3a ===== */
 header .wrapper {
-
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 /* ===== Numéro 3b ===== */
 .logo {
-
+    
 }
 
 /* ===== Numéro 3c ===== */
