--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,15 @@ body {
 /*------------------------------------------------------------------------------
    Modules
 ------------------------------------------------------------------------------*/
+/* ===== Numéro 3f ===== */
+
+header {
+    padding:20px 0 ;
+    /*padding-top: 20px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 20px;*/
+}
 
 /* ===== Numéro 3a ===== */
 header .wrapper {
@@ -54,44 +63,62 @@ header .wrapper {
 
 /* ===== Numéro 3b ===== */
 .logo {
-    
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    font: 700 4rem "Nunito", sans-serif;
+    text-decoration: none;
+    color: #444;
+
 }
 
 /* ===== Numéro 3c ===== */
-/*
+
 .menu ul {
-    margin-top: 0;
+    margin: 0;
+    /*margin-top: 0;
     margin-bottom: 0;
     margin-right: 0;
-    margin-left: 0;
+    margin-left: 0;*/
 
-    padding-top: 0;
+    padding: 0;
+    /*padding-top: 0;
     padding-bottom: 0;
     padding-right: 0;
-    padding-left: 0;
+    padding-left: 0;*/
 }
-*/
+
 
 /* ===== Numéro 3d ===== */
-/*
+
 .menu a {
-    color: black;
-    font-weight: bold;
+
+    color: #000;
+    font: bold 1.4rem 'PT Sans', sans-serif;
+    /*font-weight: bold;
     font-size: 14px;
-    font-family: 'PT Sans', sans-serif;
-    padding-top: 5px;
+    font-family: 'PT Sans', sans-serif;*/
+
+    padding: 5px 10px;
+    /*padding-top: 5px;
     padding-left: 10px;
     padding-right: 10px;
-    padding-bottom: 5px;
+    padding-bottom: 5px;*/
+
     text-transform: uppercase;
     text-decoration: none;
+
+    border: 2px solid transparent;
+    
 }
-*/
+
 
 /* ===== Numéro 3e ===== */
-/*
+
 .menu a:hover {
-    border-top-color: #000;
+    border: 2px solid #000 ;
+
+    /*border-top-color: #000;
     border-right-color: black;
     border-bottom-color: #000;
     border-left-color: black;
@@ -102,19 +129,11 @@ header .wrapper {
     border-top-width: 2px;
     border-right-width: 2px;
     border-bottom-width: 2px;
-    border-left-width: 2px;
+    border-left-width: 2px;*/
 }
-*/
 
-/* ===== Numéro 3f ===== */
-/*
-header {
-    padding-top: 20px;
-    padding-left: 0;
-    padding-right: 0;
-    padding-bottom: 20px;
-}
-*/
+
+
 
 /* ===== Numéro 4a ===== */
 /*
