--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ html {
 
 /* ===== Numéro 1 ===== */
 body {
-    font:normal 1.8rem/160% 'PT Sans', sans-serif ;
+    font:normal 1.8rem/1.6em 'PT Sans', sans-serif ;
     /*font-family: 'PT Sans', sans-serif;
     font-weight: normal;
     font-size: 18px;
@@ -66,7 +66,7 @@ header .wrapper {
     display: flex;
     align-items: center;
     gap: 20px;
-    font: 700 4rem "Nunito", sans-serif;
+    font: 700 4rem Nunito, sans-serif;
     text-decoration: none;
     color: #444;
 
@@ -136,87 +136,98 @@ header .wrapper {
 
 
 /* ===== Numéro 4a ===== */
-/*
+
 .hero {
-    background-image: url('../images/hero.jpg');
+    background: url('../images/hero.jpg') no-repeat center right/cover;
+
+    /*background-image: url('../images/hero.jpg');
     background-position: center right;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat;*/
 }
-*/
+
 
 /* ===== Numéro 4b ===== */
 .hero .wrapper {
-
+    display: flex;
+    min-height:650px ;
+    flex-direction:column;
+    justify-content: center;
 }
 
 /* ===== Numéro 4c ===== */
 .hero .contenu {
-
+    max-width: 50% ;
+    color: #fff;
 }
 
 /* ===== Numéro 4d ===== */
-/*
+
 .hero h1 {
-    font-weight: 100;
+    font: 100 10rem/100% Nunito, sans-serif;
+    /*font-weight: 100;
     font-size: 100px;
     line-height: 100%;
+    font-family: Nunito, sans-serif;*/
 
-    font-family: Nunito, sans-serif;
-    margin-top: 0;
+    margin: 0 0 20px;
+    /*margin-top: 0;
     margin-bottom: 20px;
     margin-left: 0;
-    margin-right: 0;
+    margin-right: 0;*/
     color: #F2545B;
 }
-*/
-
-/* ===== Numéro 5a ===== */
-/*
-.athletes h2 {
-    font-family: Nunito, sans-serif;
-    font-weight: bold;
-    font-size: 50px;
-    margin-top: 0;
-    margin-bottom: 50px;
-    margin-left: 0;
-    margin-right: 0;
-}
-*/
-
-/* ===== Numéro 5b ===== */
-/*
-.athletes p {
-    margin-right: 0;
-    margin-bottom: 50px;
-    margin-top: 0;
-    margin-left: 0;
-}
-*/
 
 /* ===== Numéro 5c ===== */
-/*
+
 .athletes {
-    padding-top: 100px;
+    padding: 100px 0;
+    /*padding-top: 100px;
     padding-bottom: 100px;
     padding-left: 0;
-    padding-right: 0;
+    padding-right: 0;*/
 }
-*/
+/* ===== Numéro 5a ===== */
 
+.athletes h2 {
+    font: bold 5rem/0.05em Nunito, sans-serif;
+    /*font-family: Nunito, sans-serif;
+    font-weight: bold;
+    font-size: 50px;*/
+
+    margin: 0 0 50px;
+    /*margin-top: 0;
+    margin-bottom: 50px;
+    margin-left: 0;
+    margin-right: 0;*/
+}
+
+
+/* ===== Numéro 5b ===== */
+
+.athletes p {
+    margin: 0 0 50px;
+    /*margin-right: 0;
+    margin-bottom: 50px;
+    margin-top: 0;
+    margin-left: 0;*/
+}
 
 /* ===== Numéro 5d ===== */
 .athletes-photos {
-
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
 }
 
 /* ===== Numéro 5e ===== */
 .athletes-photos img {
-
+    max-width: 100%;
 }
 
 /* ===== Numéro 5f ===== */
 .athlete1 {
-
+    grid-row: 1/3;
+    grid-column: 1/3;
 }
 
 
