--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ header .wrapper {
 /* ===== Numéro 3c ===== */
 
 .menu ul {
+    
     margin: 0;
     /*margin-top: 0;
     margin-bottom: 0;
@@ -86,6 +87,9 @@ header .wrapper {
     padding-bottom: 0;
     padding-right: 0;
     padding-left: 0;*/
+    display: flex;
+    list-style: none;
+    gap: 30px;
 }
 
 
@@ -233,38 +237,55 @@ header .wrapper {
 
 /* ===== Numéro 6a ===== */
 footer {
-
+    background-color: #000;
 }
 
 footer .wrapper {
-
+    display:flex;
+    justify-content: flex-end;
+    padding:30px 0 ;
 }
 
 /* ===== Numéro 6b ===== */
-/*
+
 .menu-social {
-    margin-top: 0;
+    margin: 0;
+    /*margin-top: 0;
     margin-left: 0;
     margin-bottom: 0;
-    margin-right: 0;
+    margin-right: 0;*/
 
-    padding-left: 0;
+    padding: 0;
+    /*padding-left: 0;
     padding-right: 0;
     padding-top: 0;
-    padding-bottom: 0;
+    padding-bottom: 0;*/
+
+    list-style: none;
+    display: flex;
+    gap: 10px;
 }
-*/
+
 
 
 /* ===== Numéro 6c ===== */
 
 footer .wrapper .menu-social a {
+    color: #fff;
+    background-color: #F2545B;
 
+    height: 40px;
+    width: 40px;
+    border-radius: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
 }
 
 /* ===== Numéro 6d ===== */
-/*
-.menu-social a:hover {
+
+footer .wrapper .menu-social a:hover {
     background: gray;
 }
-*/
